Added basic logs to Service and Controller layers Added logging config in .properties Committed un-versioned log.txt file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.username=root
 spring.datasource.password=c0mputr0n1um
 
 spring.jpa.hibernate.ddl-auto=update
+
+INFO=true
+
+logging.pattern.level=INFO
+logging.file.name=logger/log.txt
+logging.pattern.file=%c (%M) [%p] %m %d %n
+logging.pattern.console=%c: %p --> %m :: %d %n
